@@ -1,3 +1,15 @@
+2019-09-09  Jonathan Bedard  <jbedard@apple.com>
+
+        results.webkit.org: mobile-sidebar-control should override button
+        https://bugs.webkit.org/show_bug.cgi?id=201566
+
+        Rubber-stamped by Aakash Jain.
+
+        * resultsdbpy/resultsdbpy/view/static/library/css/webkit.css:
+        (@media screen and (min-width: 600px)):
+        (.mobile-sidebar-control):
+        (.mobile-sidebar-control.display):
+
 2019-09-07  Chris Dumez  <cdumez@apple.com>
 
         Rewrite http/tests/workers/service/serviceworker-private-browsing.https.html as an API test
